--- a/src/views/movieView/MovieView.css
+++ b/src/views/movieView/MovieView.css
@@ -1,58 +1,62 @@
 .movieView__container {
+  background-image: url("../../shared/img/popcorn.jpg");
+  background-size: cover;
+  padding: 1em;
+  text-align: center;
 }
 
 .movie__container {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: 1fr, 2fr, 2fr;
-  border: solid 4px #103c61;
-  border-radius: 30px;
-  gap: 2em;
+  position: relative;
+  border: solid 4px #cfb584;
+  background-color: #103c61;
+  border-radius: 10px;
   width: 55vw;
   margin: auto;
-  margin-top: 2em;
+  margin-top: 3em;
+  margin-bottom: 3em;
+}
+
+.movie__backdrop {
+  width: 765px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  box-shadow: 8px 8px 8px #212121;
+}
+
+.movie__data {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr, 2fr, 2fr;
+  gap: 2em;
 }
 
 .movie__title {
   text-align: center;
-  grid-column-start: 3;
-  grid-column-end: 6;
 }
 .movie__card {
-  grid-column: 3;
+  grid-column: 2;
   grid-row: 3;
   text-align: center;
   justify-self: end;
-  margin-right: 3em;
-}
-.release__date {
-  grid-column-start: 3;
-  grid-column-end: 6;
-  grid-row: 4;
-  justify-self: center;
 }
 .overview {
-  grid-column-start: 4;
-  grid-column-end: 7;
+  grid-column: 3;
   grid-row: 3;
   align-self: center;
   justify-self: center;
-  margin-right: 3em;
+  width: 25vw;
+}
+.release__date {
+  grid-column-start: 2;
+
+  grid-row: 4;
+  justify-self: center;
 }
 
 .voting {
   grid-column-start: 3;
-  grid-column-end: 6;
+
   grid-row: 4;
   text-align: center;
-  padding: 2em;
-}
-.movie_backdrop {
-  grid-column-start: 3;
-  grid-column-end: 6;
-  grid-row: 2;
-  justify-self: center;
-  align-self: center;
-  width: 765px;
-  object-fit: cover;
 }
