--- a/src/components/cards/Card.css
+++ b/src/components/cards/Card.css
@@ -1,4 +1,15 @@
-.card {
+.poster {
   border-radius: 8px;
   box-shadow: 5px 5px 5px #212121;
+
+  margin: auto;
+}
+.card {
+  width: min-content;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.card:hover {
+  cursor: pointer;
 }
