--- a/src/shared/global/Global.css
+++ b/src/shared/global/Global.css
@@ -4,6 +4,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Quicksand", sans-serif;
-  background-color: #212121;
+  background-color: black;
   color: whitesmoke;
 }
