--- a/src/views/aboutView/AboutView.css
+++ b/src/views/aboutView/AboutView.css
@@ -1,5 +1,5 @@
 .about__container {
-  background-image: url("../../shared/img/popcorn.jpg");
+  background-image: url("../../shared/img/popcorn_bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
   height: 87vh;
