--- a/src/views/aboutView/AboutView.css
+++ b/src/views/aboutView/AboutView.css
@@ -1,8 +1,29 @@
 .about__container {
-  background-image: url("../../shared/img/popcorn_bg.jpg");
+  background-image: url("../../shared/img/couple.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
-  height: 87vh;
+  height: 90vh;
   text-align: center;
-  margin-top: 0;
+  margin-top: -1.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  place-items: center;
+  font-size: 1.5rem;
+  text-align: center;
+}
+.paragraph__container {
+  margin: 2em;
+}
+
+.mail__to {
+  width: 1em;
+}
+.tmdb__link {
+  color: var(--clr-accent);
+  text-decoration: none;
+}
+.copyright {
+  text-align: right;
 }
