--- a/src/components/navigation/navigationDesktop/NavigationDesktop.css
+++ b/src/components/navigation/navigationDesktop/NavigationDesktop.css
@@ -1,5 +1,4 @@
 .navDesk__container {
-  overflow: hidden;
   position: relative;
   background: linear-gradient(
     to left,
@@ -7,33 +6,25 @@
     var(--clr-primary-dark)
   );
 
-  height: fit-content;
+  height: 8em;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   place-items: center;
-  margin-bottom: 0;
+  align-content: center;
 }
 .navDesk__container button {
-  width: 6em;
+  width: 5em;
   margin-right: 0.5em;
-  height: 2.5em;
+  height: fit-content;
 }
 
-.bg__img {
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: auto;
-  z-index: -1;
-}
 .nav__btns {
   grid-column: 10;
   display: flex;
   flex-direction: row;
   list-style: none;
+  margin-right: 2em;
+  align-items: center;
 }
 .nav__btn--home {
   grid-column: 7;
@@ -47,9 +38,51 @@
 .logo {
   grid-column-start: 1;
   margin-left: 1.5em;
-  width: 10em;
+  width: 8em;
   cursor: pointer;
 }
 .logo:hover {
   transform: scale(1.1);
+}
+
+@media screen and (max-width: 700px) {
+  .nav__btns {
+    display: none;
+  }
+  .hamburger {
+    position: absolute;
+    border: solid 1.2px black;
+    background-color: white;
+    right: 1em;
+    height: 2em;
+    width: 2em;
+    display: grid;
+    place-items: center;
+    align-content: space-around;
+    border-radius: 0.3em;
+  }
+  .hamburger:hover {
+    cursor: pointer;
+  }
+  .hamburger__line {
+    height: 0.2em;
+    width: 1.2em;
+    background-color: black;
+  }
+  .hamburger__line1,
+  .hamburger__line2,
+  .hamburger__line3 {
+    transition: 400ms;
+  }
+
+  .hamburger--crossed .hamburger__line1 {
+    transform: translateY(0.6rem) rotate(45deg);
+  }
+  .hamburger--crossed .hamburger__line2 {
+    transform: translateY(1.4em);
+    opacity: 0;
+  }
+  .hamburger--crossed .hamburger__line3 {
+    transform: translateY(-0.6rem) rotate(-45deg);
+  }
 }
