fixed some dropdown menu

--- a/src/components/navigation/NavigationDropdown/NavigationDropdown.css
+++ b/src/components/navigation/NavigationDropdown/NavigationDropdown.css
@@ -8,9 +8,24 @@
     position: absolute;
     right: 0;
     top: 100%;
-    width: 8em;
-    padding: 0.8em;
+    width: 10rem;
+    list-style: none;
     background-color: var(--clr-primary-dark);
     color: var(--clr-accent);
+  }
+  .navigationDropdown__container button {
+    background-color: var(--clr-primary-dark);
+    color: var(--clr-accent);
+    border: none;
+    border-radius: 0;
+    padding: 0.8em;
+    font-size: 1.2rem;
+    width: 100%;
+    margin: 0;
+  }
+  .navigationDropdown__container button:hover,
+  .navigationDropdown__container button:focus {
+    cursor: pointer;
+    background-color: var(--clr-primary);
   }
 }
