--- a/src/shared/global/Global.css
+++ b/src/shared/global/Global.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Urbanist:wght@200;300;400;600&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap");
 :root {
   --clr-primary: #852024;
   --clr-primary-dark: #4d0e10;
@@ -12,7 +11,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Urbanist", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   background-color: black;
   color: whitesmoke;
 }
