--- a/src/views/movieView/MovieView.css
+++ b/src/views/movieView/MovieView.css
@@ -62,6 +62,11 @@
   text-align: center;
   font-size: 1.5rem;
 }
+.btns {
+  display: flex;
+  gap: 1em;
+  justify-content: center;
+}
 
 @media screen and (max-width: 950px) {
   .movie__data {
