--- a/src/components/navigation/navigationDesktop/NavigationDesktop.css
+++ b/src/components/navigation/navigationDesktop/NavigationDesktop.css
@@ -44,6 +44,47 @@
 .logo:hover {
   transform: scale(1.1);
 }
+.nav__btn--movies {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 8em;
+}
+.movies--dropdown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  background-color: var(--clr-primary-dark);
+  color: var(--clr-accent);
+  z-index: 999;
+  text-align: center;
+  font-size: 1.2rem;
+  width: 8rem;
+}
+.movies--dropdown button {
+  font-size: 1.2rem;
+  background-color: var(--clr-primary-dark);
+  color: var(--clr-accent);
+  border: none;
+  width: 100%;
+  height: 2.5em;
+  margin: 0;
+}
+.movies--dropdown button:hover {
+  cursor: pointer;
+  background-color: var(--clr-secondary);
+}
+.movies--btn_toprated {
+  margin-top: 0.5em;
+}
+
+.nav__btn--movies:focus,
+.nav__btn--movies:hover .movies--dropdown {
+  display: flex;
+  flex-direction: column;
+
+  align-content: center;
+}
 
 @media screen and (max-width: 700px) {
   .nav__btns {
