--- a/src/views/signin/SignInView.css
+++ b/src/views/signin/SignInView.css
@@ -1,6 +1,9 @@
-.signin__container {
+.input {
   display: flex;
   flex-direction: column;
-  width: 20em;
-  margin: 10em;
+  width: 17em;
+  margin: 10vw;
+}
+.submit__btn {
+  margin-top: 2em;
 }
